RESOLVED FIXED227749
URL host setter should pass host to URLParser instead of trying to encode it itself
https://bugs.webkit.org/show_bug.cgi?id=227749
Summary URL host setter should pass host to URLParser instead of trying to encode it ...
Alex Christensen
Reported 2021-07-07 10:02:03 PDT
URL host setter should pass host to URLParser instead of trying to encode it itself
Attachments
Patch (7.82 KB, patch)
2021-07-07 10:03 PDT, Alex Christensen
no flags
Patch (6.62 KB, patch)
2021-07-07 14:15 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-07-07 10:03:09 PDT
Chris Dumez
Comment 2 2021-07-07 10:05:41 PDT
Comment on attachment 433040 [details] Patch r=me assuming the bots are happy.
Alex Christensen
Comment 3 2021-07-07 14:15:59 PDT
Alex Christensen
Comment 4 2021-07-07 15:45:24 PDT
Radar WebKit Bug Importer
Comment 5 2021-07-07 15:46:17 PDT
Note You need to log in before you can comment on or make changes to this bug.