URL host setter should pass host to URLParser instead of trying to encode it itself https://bugs.webkit.org/show_bug.cgi?id=227749

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/url/url-setters-a-area.window-expected.txt:
* web-platform-tests/url/url-setters.any-expected.txt:
* web-platform-tests/url/url-setters.any.worker-expected.txt:

Source/WTF:

For non-special schemes, the host is percent-encoded instead of punycode-encoded.
Allowing the URL parser to handle all input directly does the right thing for non-special schemes.

* wtf/URL.cpp:
(WTF::URL::setHost):
(WTF::URL::setHostAndPort):



Canonical link: https://commits.webkit.org/239485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279680 268f45cc-cd09-0410-ab3c-d52691b4dbfc